@@ -5,6 +5,8 @@ DescTools 0.99.38 (2020-09-09)
 NEW FUNCTIONS ADDED:
   * ORToRelRisk.glm() converts odds ratios from a logistic regression
     to relative risks.
+  * RevCode() reverses the codes of a numeric variable (e.g. a Likert 
+    scale).  
 
 UPDATED FUNCTIONS:
   * The Format() argument "leading" has been replaced by "ldigits". Leading zeros
